This is a test to make sure Box doesn't interfere with anything. I added in the rmarkdown file to sort by choices.

--- a/Testing Stuff/FurtherSortingWork.Rmd
+++ b/Testing Stuff/FurtherSortingWork.Rmd
@@ -128,3 +128,21 @@ for(i in 1:4){
 
 ```
 
+
+
+
+#### Now lets sort by choice
+
+```{r}
+
+for(i in 1:4){
+  q <- questions[[i]]
+
+  q_table <- mc_multiple_answer_results(q, original_first_rows, sort_by = "Choices_Alpha")
+  rt <- q_table$Table
+
+  print(rt)
+}
+
+
+```
