--- a/ScratchWork/Parsing-QSF-exploration.Rmd
+++ b/ScratchWork/Parsing-QSF-exploration.Rmd
@@ -7,8 +7,8 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
-library(QualtricsTools)
+#library(tidyverse)
+#library(QualtricsTools)
 ```
 
 ## Updating functions
